<resources>
    <string name="app_name">Turism Yandex Maps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Туризм по России</string>
    <string name="nav_header_subtitle">Туризм по России на Яндекс Картах</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_adventures_name">Мои путешествия</string>
    <string name="nav_maps_name">Карты</string>
    <string name="nav_tickets_name">Билеты</string>
    <string name="turism_places">Интересные места</string>
    <string name="sochi_title1">
        Каньон Белые скалы \n \n
        Где находится: Село Хлебороб, Сочи \n
        Стоимость: Входной билет 200 ₽ \n
        Время на посещение: 2-3 часа
    </string>
    <string name="sochi_info1">Если вы хотите увидеть каньон времён Юрского периода,
        то вам обязательно нужно посетить туристический маршрут «Белые скалы». Располагается от
        на территории Сочинского Национального парка, в Навалишинском ущелье, неподалёку от села
        Красная Воля. Потрясающие живописные виды, смотровая площадка, фирменная бургерная и
        вегетарианское кафе, несколько зон отдыха с лежаками и многое другое. Стоимость посещения
        200 рублей. Работает маршрут ежедневно с 8:00 до 18:00. Смотровая площадка и кафе до 20:00.
    </string>
    <string name="sochi_title2">
        Гора Большой Архун \n\n
        Где находится: Сочи \n
        Стоимость: 100 ₽ \n
        Время работы: 10:00 - 21:00
    </string>
    <string name="sochi_info2">Гора Большой Ахун, на которой располагается смотровая башня собирает
        много туристов, но сюда стоит поехать и подняться именно на самый верх. Если вы хотите
        посмотреть на Сочи с высоты, то доступнее места не найти. С высоты открывается вид 360
        градусов на море и Сочи с одной стороны, и на горы с другой. Это очень доступная смотровая
        площадка. От центра Сочи ехать каких-то 40 минут уже с учетом небольших пробок.
    </string>
    <string name="sochi_title3">
        Смотровая площадка Роза Ветров\n\n
        Где находится: Центральный район Сочи\n
        Стоимость: 100 ₽\n
        Время на посещение: 30 минут\n
        Время работы: 24/7
    </string>
    <string name="sochi_info3">Эта смотровая находится почти в центре Сочи и заслуживает внимания.
        Вы сможете посмотреть на Сочи и море и отдохнуть при желании в ресторане на крыше. На
        крыше башни находится кафе, но если вы приехали отдельно на смотровую, то за панорамный
        вид на город и море с вас попросят 100 рублей с человека.
    </string>
    <string name="spb_title1">Анненкирхе</string>
    <string name="spb_info1">Еще один способ ближе узнать оборотную сторону петербургской
        архитектуры — заглянуть в сгоревшую лютеранскую церковь Анненкирхе
        (Кирочная ул., 8В). В XVIII-XIX веках здесь находился немецкоязычный приход, в
        советское время — кинотеатр, а потом — рок-клуб.
        Во дворе церкви снималось несколько сцен фильма «Брат».
        В 2002 году интерьеры кирхи уничтожил пожар. Восстановление идет постепенно,
        но церковь открыта для посетителей. Здесь проходят выставки и ярмарки, концерты
        и другие культурные мероприятия. Петербуржцы часто захаживают сюда. Но самое интересное,
        что вы здесь увидите — готические церковные интерьеры,
        немного мрачноватые, но по-настоящему впечатляющие.
    </string>
    <string name="spb_title2">Васильевский остров</string>
    <string name="pkc_title1">Долина гейзеров</string>
    <string name="pkc_info1">Уникальность этого места заключается в том, что это одно из самых
        больших полей в мире по числу действующих гейзеров. Долина признана наследием ЮНЕСКО.
        Сюда стремятся попасть все туристы, единственное препятствие — путь, который совсем не
        прост. Добраться до места можно только одним способом — по воздуху. Для этого необходимо
        заранее получить специальное разрешение, при этом численность группы строго ограничена, так
        как вы полетите на вертолёте. По этой причине большинство туристов смогли увидеть Долину
        гейзеров только на многочисленных фотографиях. Кстати, любители советского кино не раз
        наблюдали её изнутри в фильме «Земля Санникова».Территориально Долина расположена на
        севере-востоке от столицы Камчатки — города Петропавловск-Камчатский. Расстояние до неё
        около 180 километров. Достопримечательность находится на территории Кроноцкого заповедника
        в кальдере вулкана Узон. Площадь сравнительно небольшая, всего 4 квадратных километра.
        Но плотность гейзеров, вулканов, термальных источников, водопадов и озёр — зашкаливает.
        Поэтому и считается, что это самое крупное гейзерное поле в Европе и Азии, и подобных
        мест больше нет.
    </string>
    <string name="pkc_title2">Кальдера вулкана Узон</string>
    <string name="pkc_info2">Кальдера — часть вулкана, которая окружает его по всему периметру. Она
        образуется в результате обрушения стен либо из-за сильнейших извержений. Кальдера вулкана
        Узон — одна из самых больших на всей Камчатке. Удивительное место находится в заповеднике
        Кроноцкий. Площадь составляет 100 квадратных километров. Чтобы пересечь её, потребуется
        преодолеть 12 километров водного пространства и трудно проходимой местности. В этом
        удивительном месте прямо внутри котловины Узона не успокаивается ни на минуту геотермальная
        активность. Здесь много разных озёр, в которых бурлит и пенится вода. На западе около ста
        действующих источников и полно прочих геотермальных явлений. У кальдеры Узона есть и самая
        высокая точка — Бараний пик. В коллекции есть и самое опасное место — озеро Банное, дно
        которого покрыто застывшей серой, а под ней бурлит уже расплавленная сера. По этой причине
        в отдельных местах от воды исходит пар даже в тёплое время, так как вода сохраняет высокую
        температуру (до 40 градусов по Цельсию) даже в морозные месяцы.
    </string>
    <string name="pkc_title3">Ключевская сопка</string>
    <string name="pkc_info3">Вы не прочувствовали дух Камчатки, если не посетили вулканы. Причём
        точное количество их на полуострове не знает никто. «Вулканы Камчатки» — это природный
        объект, который находится под защитой ЮНЕСКО. В него входят 330 потухших и действующих
        вулканов. Но самым знаменитым считается Ключевская сопка, он же и самый высокий в Европе и
        Азии. Высота действительно поражает — 4750 метров над уровнем моря! Помимо размеров, он ещё
        и крайне опасен. Это действующий и самый нестабильный вулкан во всём мире. Ключевская сопка
        может активироваться в любой момент, и когда он наступит, никто предугадать не может. К
        восхождению на него допускаются только самые опытные туристы, остальным — строго запрещено.
        Последний раз вулкан давал о себе знать совсем недавно — в 2017 году. Но не стоит
        расстраиваться, если вам не дали разрешение на подъём. Поверьте, даже просто стоя у подножья
        вулкана можно заметить, как жерло источает столбы дыма. Впечатлений и зрелищ будет обеспечено
        сполна!
    </string>
    <string name="ikt_title1">130-й квартал (Иркутская слобода)</string>
    <string name="ikt_info1">Иркутская слобода или 130-й квартал — одна из визитных карточек
        Иркутска — общественное пространство общей площадью 5,7 гектаров представляет собой
        восстановленные исторические застройки. Ранее на месте модного сейчас квартала стояло
        ветхое деревянное жильё. Первые дома на этой земле начали строить ещё в 18 веке. В 2010
        году правительство города приняло решение восстановить объекты деревянного зодчества и к
        350-летию Иркутска, в 2011 году, 130-й квартал был торжественно открыт. Сейчас это одно из
        самых популярных мест в городе, здесь работают десятки всевозможные кафе, баров и ресторанов
        на любой вкус, а также множество магазинов и сувенирных лавок. В 130-м квартале также
        находятся: планетарий, отдел «Окно в Азию» краеведческого музея, галерея современного
        искусства «DiaS», музей занимательной науки «Экспериментарий», букинистическая лавка и
        многое другое. Кроме того, само пространство квартала располагает к неспешной прогулке.
        В финале можно сфотографироваться на фоне символа Иркутска — статуи «бабра».
    </string>
    <string name="ikt_title2">Набережная Ангары</string>
    <string name="ikt_info2">Другое место притяжения в Иркутске — набережная Ангары, которая дарит
        центру города не только свою красоту, но и свежий воздух. Есть три части, где оборудованы
        скверы и общественные пространства — Верхняя набережная, бульвар Гагарина и Нижняя
        набережная. В районе Верхней набережной находиться небольшой сквер, рестораны и магазины.
        Отсюда открывается отличный вид на плотину ГЭС. Ближе к центру от улицы Кожова до
        Глазковского моста находится пешеходный бульвар Гагарина — одно из любимых мест горожан.
        В районе пересечения с улицей Карла Маркса, где стоит памятник Александру III, есть
        пешеходный мост на живописный остров Юность. Здесь можно взять напрокат велосипеды и
        скутеры, а зимой покататься на коньках. Ещё одна фишка острова — Детская Восточно-Сибирская
        железная дорога длинной 3,25 километра, где можно всей семьёй покататься на миниатюрном
        поезде, управляют которым школьники под руководством инструкторов. Последний отрезок —
        Нижняя набережная — колыбель Иркутска. Именно на этот берег в XVI прибыл отряд казаков
        вместе с их предводителем Яковым Пахабовым, об этом напоминает памятник «Первопроходцам».
        Неподалёку можно увидеть первое каменное здание города — Спасскую церковь, а также собор
        Богоявления и восстановленные на новом месте Московские триумфальные ворота. Чуть ближе к
        главной площади города — скверу им. Кирова — Вечный огонь и костёл Успения Девы Марии, в
        котором расположен органный зал филармонии.
    </string>
    <string name="ikt_title3">Иркутский музей декабристов и Дом Европы</string>
    <string name="ikt_info3">Погрузиться в атмосферу дворянской усадьбы можно в Иркутском музее
        декабристов. Два деревянных особняка музейного комплекса князей Сергея Трубецкого и Сергея
        Волконского находятся в квартале друг от друга. В каждом из них в исторических интерьерах
        представлены подлинные вещи декабристов. В том числе единственное в мире действующее
        пирамидальное фортепиано конца XVIII века, принадлежавшее Марии Волконской. Усадьба
        Волконских расположена рядом с храмом Преображения Господня и с авторским театром-студией
        «Пилигримов» Владимира Соколова. С другой стороны квартала находится ещё одна из визитных
        карточек Иркутска — Усадьба Шастина, более известная как Кружевной дом. Памятник деревянного
        зодчества смотрится очень нарядно благодаря белой деревянной резьбе, которая эффектно
        контрастирует с темным деревом фасада. Особняк — часть комплекса «Дом Европы», на территории
        которого расположены памятники архитектуры, в которых устроены кафе, гостиница и Музей
        городского быта.
    </string>
</resources>