<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Камчатка"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/turism_places">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/pkc_title1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/pkc_info1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="296dp"
                android:src="@drawable/pkc_place_image1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/pkc_title2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/pkc_info2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="290dp"
                android:src="@drawable/pkc_place_image2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/pkc_title3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/pkc_info3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="289dp"
                android:src="@drawable/pkc_place_image3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>