<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Сочи"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/turism_places"
        android:duplicateParentState="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sochi_title1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/sochi_info1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="281dp"
                android:src="@drawable/sochi_place_image1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/sochi_title2"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/sochi_info2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="276dp"
                android:src="@drawable/sochi_place_image2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/sochi_title3"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/sochi_info3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="311dp"
                android:src="@drawable/sochi_place_image3" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>